# yotouch

./: DEVELOPMENT.md  README.md  docker-compose.yml  package-lock.json  package.json
ai-service/: Dockerfile  README.md  pyproject.toml
ai-service/app/: main.py  routes.py  schemas.py
ai-service/app/services/: embeddings.py  liveness.py
backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/generated-wallet/: address-2025-12-04T21-11-29-832Z.txt  signing-key-2025-12-04T21-11-29-832Z.txt  verification-key-2025-12-04T21-11-29-832Z.txt
backend/prisma/: schema.prisma
backend/src/: app.ts  server.ts
backend/src/config/: env.ts
backend/src/controllers/: badgeController.ts  identityController.ts  proofController.ts  walletController.ts
cardano-contract/: README.md  aiken.toml  plutus.json
cardano-contract/policies/: badge_mint.ak
cardano-contract/tests/: identity_validator_test.ak
cardano-contract/validators/: badge_holder.ak  badge_types.ak  identity_validator.ak
frontend/: .firebaserc  .gitignore  README.md  package-lock.json  package.json  vite.config.ts
frontend/.firebase/: hosting.LmZpcmViYXNlXHlvdG91Y2hcaG9zdGluZw.cache
frontend/scripts/: create-default-admin.mjs  create-test-accounts.mjs
frontend/src/: App.tsx  t.php
frontend/supabase/: config.toml
new_frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
new_frontend/aiken-build/: plutus.json
new_frontend/src/: App.tsx  index.css
supabase/.temp/: pooler-url  project-ref
temp_contract/: README.md  aiken.toml
(+67 files in other folders)
